nav alignment fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5259,11 +5259,10 @@ body .ui-tooltip {
   color: var(--tp-common-black);
 }
 .tp-header-2-area.tp-header-sticky-cloned.tp-header-inner-style .tp-header-2-menu > nav > ul > li > a {
-  padding: 25px 0;
-  padding-top: 35px;
+  padding: 30px 0;
 }
 .tp-header-2-area.tp-header-sticky-cloned.tp-header-inner-style .tp-header-2-menu > nav > ul > li > a::after {
-  top: 36%;
+  top: 50%;
 }
 .tp-header-2-area.tp-header-sticky-cloned.tp-header-inner-style .tp-header-icon.cart:hover .minicart {
   top: 151%;
@@ -5992,8 +5991,8 @@ body .ui-tooltip {
   }
 }
 .tp-header-inner-style .tp-header-2-menu > nav > ul > li > a {
-  padding-top: 55px;
-  padding-bottom: 35px;
+  padding-top: 45px;
+  padding-bottom: 45px;
   color: var(--tp-common-black);
 }
 .tp-header-inner-style .tp-header-2-menu > nav > ul > li > a::before {
@@ -6003,7 +6002,7 @@ body .ui-tooltip {
 }
 .tp-header-inner-style .tp-header-2-menu > nav > ul > li > a::after {
   left: 0;
-  top: 42%;
+  top: 50%;
   transform: translate(0, -50%);
 }
 .tp-header-inner-style .tp-header-2-menu > nav > ul > li .submenu > ul > li > a {
